Alerts now avaialble for testing